[package]
name = "crazy-deduper"
version = "0.1.0-SNAPSHOT"
edition = "2021"

authors = ["Florian Gamböck <mail@floga.de>"]
description = "Unconventional deduping method."
repository = "https://github.com/FloGa/crazy-deduper.git"
readme = "README.md"
categories = []
keywords = []
license = "MIT"

[dependencies]
anyhow = "1.0.75"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.4.8", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.50"
walkdir = "2.4.0"
zstd = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
dir-diff = "0.3.2"
lazy_static = "1.4.0"
predicates = "3.0.4"
