[package]
name = "crazy-deduper"
version = "0.3.0-SNAPSHOT"
edition = "2024"

authors = ["Florian Gamböck <mail@floga.de>"]
description = "Deduplicates files into content-addressed chunks with selectable hash algorithms and restores them via a persistent cache."
repository = "https://github.com/FloGa/crazy-deduper"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "file", "utility"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.75"
base16ct = { version = "1.0.0", features = ["alloc"] }
clap = { version = "4.4.8", features = ["derive"] }
file-declutter = "0.1.0"
md-5 = "0.10.6"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.12"
walkdir = "2.4.0"
zstd = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
lazy_static = "1.4.0"
predicates = "3.0.4"
